Add tooltip window to the list of highlighted windows.

BUG:341934