applets/taskmanager/plugin/backend.h
@@ -34,6 +34,7 @@ class Backend : public QObject
     Q_PROPERTY(QObject* groupManager READ groupManager CONSTANT)
     Q_PROPERTY(QObject* tasksModel READ tasksModel CONSTANT)
     Q_PROPERTY(QQuickItem* taskManagerItem READ taskManagerItem WRITE setTaskManagerItem NOTIFY taskManagerItemChanged)
+    Q_PROPERTY(QQuickItem* toolTipItem READ toolTipItem WRITE setToolTipItem NOTIFY toolTipItemChanged)
     Q_PROPERTY(bool anyTaskNeedsAttention READ anyTaskNeedsAttention)
     Q_PROPERTY(bool highlightWindows READ highlightWindows WRITE setHighlightWindows NOTIFY highlightWindowsChanged)
     Q_PROPERTY(int groupingStrategy READ groupingStrategy WRITE setGroupingStrategy)
@@ -49,6 +50,9 @@ class Backend : public QObject
 
         QQuickItem* taskManagerItem() const;
         void setTaskManagerItem(QQuickItem *item);
+
+        QQuickItem* toolTipItem() const;
+        void setToolTipItem(QQuickItem *item);
 
         bool anyTaskNeedsAttention() const;
 
@@ -83,6 +87,7 @@ class Backend : public QObject
 
     Q_SIGNALS:
         void taskManagerItemChanged(QQuickItem*);
+        void toolTipItemChanged(QQuickItem*);
         void highlightWindowsChanged(bool);
         void launchersChanged();
 
@@ -90,6 +95,7 @@ class Backend : public QObject
         TaskManager::GroupManager *m_groupManager;
         TaskManager::TasksModel *m_tasksModel;
         QQuickItem* m_taskManagerItem;
+        QQuickItem* m_toolTipItem;
         WId m_lastWindowId;
         bool m_highlightWindows;
         QString m_launchers;
